--- a/app/src/main/res/layout/content_shopping_cart.xml
+++ b/app/src/main/res/layout/content_shopping_cart.xml
@@ -23,13 +23,14 @@
         <Button
             android:id="@+id/button6"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
+            android:layout_alignParentLeft="true"
             android:text="@string/button_back" />
 
         <ListView
             android:id="@+id/list_view_products"
             android:layout_width="wrap_content"
-            android:layout_height="350dp"
+            android:layout_height="300dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentEnd="true"
@@ -37,12 +38,12 @@
 
         <Space
             android:layout_width="match_parent"
-            android:layout_height="30dp" />
+            android:layout_height="20dp" />
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="20dp"
             android:text="@string/text_view_shopping_total"
             android:textAlignment="center"
             android:textStyle="bold" />
@@ -53,7 +54,7 @@
             android:layout_height="wrap_content"
             android:text="$00.00"
             android:textAlignment="center"
-            android:textSize="30sp"
+            android:textSize="25sp"
             android:textStyle="bold" />
 
         <Space
@@ -63,7 +64,7 @@
         <Button
             android:id="@+id/button5"
             android:layout_width="match_parent"
-            android:layout_height="90dp"
+            android:layout_height="60dp"
             android:layout_alignParentBottom="true"
             android:text="@string/button_checkout"
             android:textSize="18sp" />
