--- a/app/src/main/res/layout/content_shopping_cart.xml
+++ b/app/src/main/res/layout/content_shopping_cart.xml
@@ -41,7 +41,7 @@
             android:layout_height="20dp" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/string_total"
             android:layout_width="match_parent"
             android:layout_height="20dp"
             android:text="@string/text_view_shopping_total"
@@ -49,7 +49,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/number_total"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="$00.00"
