--- a/app/src/main/res/layout/activity_shopping_cart.xml
+++ b/app/src/main/res/layout/activity_shopping_cart.xml
@@ -26,7 +26,7 @@
         </TextView>
     </LinearLayout>
 
-
+<!--
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_cart"
         android:layout_above="@+id/btn_placeorder"
@@ -34,6 +34,17 @@
         android:layout_height="match_parent"
         android:layout_width="match_parent">
     </android.support.v7.widget.RecyclerView>
+-->
+    <ListView
+        android:id="@+id/list_view_items"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/layout_total"
+        android:layout_above="@+id/btn_placeorder"/>
 
 
     <Button
