--- a/app/src/main/res/layout/activity_shopping_cart.xml
+++ b/app/src/main/res/layout/activity_shopping_cart.xml
@@ -1,67 +1,3 @@
-<RelativeLayout android:background="#e1e1e1"
-    android:layout_height="fill_parent"
-    android:layout_width="fill_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <LinearLayout
-        android:id="@+id/layout_total"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:padding="5dp"
-        android:weightSum="2">
-        <TextView android:gravity="end"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:text="Total : "
-            android:textSize="20dp">
-        </TextView>
-
-        <TextView
-            android:id="@+id/tv_total"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:text="0 Rs"
-            android:textSize="20dp">
-        </TextView>
-    </LinearLayout>
-
-<!--
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_cart"
-        android:layout_above="@+id/btn_placeorder"
-        android:layout_below="@+id/layout_total"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent">
-    </android.support.v7.widget.RecyclerView>
--->
-    <ListView
-        android:id="@+id/list_view_items"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/layout_total"
-        android:layout_above="@+id/btn_placeorder"/>
-
-
-    <Button
-        android:id="@+id/btn_placeorder"
-        android:layout_gravity="center"
-        android:layout_alignParentBottom="true"
-        android:layout_height="60dp"
-        android:layout_width="match_parent"
-        android:onClick="insertOrder"
-        android:text="Place Order"
-        android:textColor="@android:color/white"
-        android:theme="@style/Theme.AppCompat">
-    </Button>
-
-</RelativeLayout>
-
-<!--
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -70,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="edu.uark.uarkregisterapp.ShoppingCartActivity">
+    tools:context="edu.uark.uarkregisterapp.ProductsListingActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -82,24 +18,10 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay"
-            android:title="cart">
-
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/title_shopping_cart"
-                android:textAlignment="textStart"
-                android:textColor="@android:color/white"
-                android:textSize="24sp"
-                android:textStyle="bold" />
-        </android.support.v7.widget.Toolbar>
+            app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_shopping_cart"/>
-
+    <include layout="@layout/content_shopping_cart" />
 
 </android.support.design.widget.CoordinatorLayout>
--->
