--- a/app/src/main/res/layout/content_shopping_cart.xml
+++ b/app/src/main/res/layout/content_shopping_cart.xml
@@ -1,106 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <android.support.v7.widget.CardView
-        android:id="@+id/card_myevent"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        card_view:cardElevation="5dp"
-        card_view:cardUseCompatPadding="true"
-        android:clickable="true"
-        android:foreground="?attr/selectableItemBackground"
-        >
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:weightSum="4"
-            >
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="10dp"
-                >
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:weightSum="5"
-                    android:gravity="center"
-                    >
-
-                    <TextView
-                        android:id="@+id/tv_name"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:text="Itemname"
-                        android:layout_weight="0.75"
-                        android:textSize="13dp"
-                        />
-
-                    <TextView
-                        android:id="@+id/tv_size"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:text="Size"
-                        android:textSize="13dp"
-                        android:textAlignment="center"
-                        android:layout_weight="1.1"
-
-                        />
-
-                    <TextView
-                        android:id="@+id/tv_quantity"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:text="Rate"
-                        android:textAlignment="center"
-                        android:layout_weight="1"
-                        android:textSize="13dp"
-                        />
-
-                    <TextView
-                        android:id="@+id/tv_total"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:text="Total"
-                        android:layout_toRightOf="@+id/tv_qty"
-                        android:textAlignment="center"
-                        android:textSize="13dp"
-                        android:layout_weight="1"
-                        />
-
-                    <CheckBox
-                        android:id="@+id/chk_selectitem"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1.15"
-                        android:clickable="false"
-                        />
-                </LinearLayout>
-
-            </LinearLayout>
-
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
-</LinearLayout>
-
-
-<!--
-
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    android:id="@+id/content_products_listing"
+    android:id="@+id/activity_shopping_cart"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -111,202 +10,102 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="edu.uark.uarkregisterapp.ShoppingCartActivity"
-    tools:showIn="@layout/activity_shopping_cart">
-
+    tools:context="edu.uark.uarkregisterapp.ShoppingCartActivity">
     <LinearLayout
         android:id="@+id/layout_total"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:padding="5dp"
         android:weightSum="2">
+
         <TextView
-            android:gravity="end"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:text="Total : "
-            android:textSize="20dp">
-        </TextView>
+            android:gravity="end"
+            android:text="@string/text_view_shopping_total"
+            android:textSize="20sp"></TextView>
 
         <TextView
             android:id="@+id/tv_total"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:text="0 Rs"
-            android:textSize="20dp">
-        </TextView>
+            android:text="$0.00"
+            android:textSize="20sp"></TextView>
     </LinearLayout>
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+<!--
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_cart"
+        android:layout_above="@+id/btn_placeorder"
+        android:layout_below="@+id/layout_total"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent">
+    </android.support.v7.widget.RecyclerView>
+-->
+    <ListView
+        android:id="@+id/list_view_items"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/layout_total"
+        android:layout_above="@+id/btn_placeorder"/>
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="40dp" />
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/card_myevent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardElevation="5dp"
-            app:cardUseCompatPadding="true"
-            android:clickable="true"
-            android:foreground="?attr/selectableItemBackground"
-            >
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:weightSum="4"
-                >
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:padding="10dp"
-                    >
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:weightSum="5"
-                        android:gravity="center"
-                        >
-
-                        <TextView
-                            android:id="@+id/tv_name"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:textAppearance="?android:attr/textAppearanceMedium"
-                            android:text="Itemname"
-                            android:layout_weight="0.75"
-                            android:textSize="13dp"
-                            />
-
-                        <TextView
-                            android:id="@+id/tv_size"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:textAppearance="?android:attr/textAppearanceMedium"
-                            android:text="Size"
-                            android:textSize="13dp"
-                            android:textAlignment="center"
-                            android:layout_weight="1.1"
-
-                            />
-
-                        <TextView
-                            android:id="@+id/tv_rate"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:textAppearance="?android:attr/textAppearanceMedium"
-                            android:text="Rate"
-                            android:textAlignment="center"
-                            android:layout_weight="1"
-                            android:textSize="13dp"
-                            />
-
-                        <TextView
-                            android:id="@+id/tv_total"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:textAppearance="?android:attr/textAppearanceMedium"
-                            android:text="Total"
-                            android:layout_toRightOf="@+id/tv_qty"
-                            android:textAlignment="center"
-                            android:textSize="13dp"
-                            android:layout_weight="1"
-                            />
-
-                        <CheckBox
-                            android:id="@+id/chk_selectitem"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1.15"
-                            android:clickable="false"
-                            />
-                    </LinearLayout>
-
-                </LinearLayout>
-
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
-    </LinearLayout>
 
     <Button
         android:id="@+id/btn_placeorder"
-        android:layout_gravity="center"
-        android:layout_alignParentBottom="true"
-        android:layout_height="60dp"
         android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="center"
         android:onClick="insertOrder"
-        android:text="Place Order"
-        android:textColor="@android:color/white">
-    </Button>
+        android:text="@string/button_place_order"
+        android:textColor="@android:color/white"
+        android:theme="@style/Theme.AppCompat"></Button>
+
 </RelativeLayout>
 
--->
-
 <!--
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:context="edu.uark.uarkregisterapp.ShoppingCartActivity">
 
-    <LinearLayout
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-        <Button
-            android:id="@+id/button6"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_alignParentLeft="true"
-            android:text="@string/button_back" />
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            android:title="cart">
 
-        <ListView
-            android:id="@+id/list_view_products"
-            android:layout_width="wrap_content"
-            android:layout_height="300dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true" />
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/title_shopping_cart"
+                android:textAlignment="textStart"
+                android:textColor="@android:color/white"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+        </android.support.v7.widget.Toolbar>
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="20dp" />
+    </android.support.design.widget.AppBarLayout>
 
-        <TextView
-            android:id="@+id/string_total"
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:text="@string/text_view_shopping_total"
-            android:textAlignment="center"
-            android:textStyle="bold" />
+    <include layout="@layout/list_view_shopping_cart"/>
 
-        <TextView
-            android:id="@+id/number_total"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="$00.00"
-            android:textAlignment="center"
-            android:textSize="25sp"
-            android:textStyle="bold" />
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="20dp" />
-
-        <Button
-            android:id="@+id/button5"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_alignParentBottom="true"
-            android:text="@string/button_checkout"
-            android:textSize="18sp" />
-
-    </LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
 -->
