Format changes for ProductsListingActivity

--- a/app/src/main/res/layout/list_view_item_product.xml
+++ b/app/src/main/res/layout/list_view_item_product.xml
@@ -19,6 +19,14 @@
         android:layout_width="0dp"
         android:layout_height="fill_parent"
         android:layout_weight="3"
+        />
+
+    <TextView
+        android:id="@+id/list_view_item_product_price"
+        android:text="@string/text_view_products_count"
+        android:layout_width="0dp"
+        android:layout_height="fill_parent"
+        android:layout_weight="3"
         android:gravity="end"
         android:layout_gravity="end"/>
 
