--- a/app/src/main/res/layout/list_view_item_product.xml
+++ b/app/src/main/res/layout/list_view_item_product.xml
@@ -15,11 +15,11 @@
 
     <TextView
         android:id="@+id/list_view_item_product_count"
-        android:text="@string/text_view_products_count"
         android:layout_width="0dp"
         android:layout_height="fill_parent"
         android:layout_weight="3"
-        />
+        android:text="@string/text_view_products_count"
+        android:textAlignment="center" />
 
     <TextView
         android:id="@+id/list_view_item_product_price"
