--- a/app/src/main/res/layout/list_view_shopping_cart.xml
+++ b/app/src/main/res/layout/list_view_shopping_cart.xml
@@ -84,8 +84,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1.15"
-                        android:clickable="false"
-                        />
+                        android:button="@android:drawable/ic_delete"
+                        android:checked="false"
+                        android:clickable="true" />
                 </LinearLayout>
 
             </LinearLayout>
