--- a/app/src/main/res/layout/content_item_view.xml
+++ b/app/src/main/res/layout/content_item_view.xml
@@ -68,8 +68,10 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
+        android:background="@color/design_default_color_primary"
         android:onClick="addToCart"
-        android:text="@string/button_add_to_cart" />
+        android:text="@string/button_add_to_cart"
+        android:textColor="@android:color/white" />
 
 
     <!--<ImageButton
