Product Update on Main Activity

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -61,11 +61,21 @@
     android:text="@string/button_create_employee"
     android:onClick="createEmployeeButtonOnClick"/>
 
-<Button
+    <Button
+        android:id="@+id/button_update_products"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/button_create_employee"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:onClick="productsListingUpdateActivityButtonOnClick"
+        android:text="Update Products" />
+
+    <Button
     android:id="@+id/button_log_out"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_below="@+id/button_create_employee"
+    android:layout_below="@+id/button_update_products"
     android:layout_centerHorizontal="true"
     android:layout_marginTop="50dp"
     android:text="@string/button_log_out"
